[gd_scene load_steps=8 format=3 uid="uid://bmp8ebjsrqob1"]

[ext_resource type="Script" uid="uid://dtm2pfjnoyxju" path="res://mirror_scene.gd" id="1_b0db5"]
[ext_resource type="Texture2D" uid="uid://yqlsa533eqi3" path="res://Illustration2.png" id="1_de6ca"]
[ext_resource type="Texture2D" uid="uid://dhlf8ogqj0etx" path="res://vintage-mirror-vector-removebg-preview.png" id="1_m0tmj"]
[ext_resource type="Script" uid="uid://dvauw05dxy8qn" path="res://mirror_dialogue.gd" id="4_aanst"]
[ext_resource type="PackedScene" uid="uid://7jhf8qcdpc32" path="res://dialogue_manager.tscn" id="5_trnob"]
[ext_resource type="FontFile" uid="uid://dtrgcnolp4qkr" path="res://GUI/Role_Playing_Fonts_4_Mini/MiniCard.ttf" id="6_knqfn"]
[ext_resource type="Texture2D" uid="uid://ceovqc7sey6xl" path="res://GUI/UI assets pack 2/UI books & more2.png" id="7_aanst"]

[node name="Mirror_Scene" type="Node2D" node_paths=PackedStringArray("dialogue_position", "dialogue_done", "sec_dialogue_done")]
script = ExtResource("1_b0db5")
dialogue_position = NodePath("Main")
dialogue_done = NodePath("Main/DialogueManager")
sec_dialogue_done = NodePath("Main/DialogueManager")

[node name="Panel" type="Panel" parent="."]
offset_left = 1.0
offset_right = 805.0
offset_bottom = 453.0
mouse_filter = 2

[node name="Mirror" type="Sprite2D" parent="."]
modulate = Color(0.839216, 1, 1, 1)
texture_filter = 1
position = Vector2(446, 221)
rotation = 1.5708
scale = Vector2(5.73409, 6.09974)
texture = ExtResource("1_m0tmj")

[node name="Horror_Timer" type="Timer" parent="."]

[node name="Normal_reflection" type="Sprite2D" parent="."]
position = Vector2(380, 255)
scale = Vector2(0.590481, 0.600125)
texture = ExtResource("1_de6ca")
region_enabled = true
region_rect = Rect2(190, 0, 729, 841)

[node name="Horror_reflection" type="Sprite2D" parent="."]
position = Vector2(384, 236)
scale = Vector2(0.590481, 0.600125)
texture = ExtResource("1_de6ca")
region_enabled = true
region_rect = Rect2(1902, 10, 665, 783)

[node name="Scared_reflection" type="Sprite2D" parent="."]
position = Vector2(384, 236)
scale = Vector2(0.590481, 0.600125)
texture = ExtResource("1_de6ca")
region_enabled = true
region_rect = Rect2(160, 852, 796, 900)

[node name="Main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 795.0
offset_bottom = 450.0
mouse_filter = 2
script = ExtResource("4_aanst")

[node name="DialogueManager" parent="Main" instance=ExtResource("5_trnob")]

[node name="NextLabel" type="Label" parent="Main"]
layout_mode = 0
offset_left = 346.0
offset_top = 324.0
offset_right = 446.0
offset_bottom = 340.0
mouse_filter = 0
theme_override_fonts/font = ExtResource("6_knqfn")
text = "Press Space."

[node name="DialoguePosition" type="Marker2D" parent="Main"]
position = Vector2(396, 445)

[node name="Flicker_Timmer" type="Timer" parent="."]
wait_time = 0.2

[node name="Wait_timer" type="Timer" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = 610.0
offset_top = 3.0
offset_right = 628.0
offset_bottom = 19.0
metadata/_edit_group_ = true

[node name="UiBooks&More2" type="Sprite2D" parent="Button"]
position = Vector2(9, 7)
texture = ExtResource("7_aanst")
region_enabled = true
region_rect = Rect2(674, 408, 16, 17)

[connection signal="timeout" from="Horror_Timer" to="." method="_on_horror_timer_timeout"]
[connection signal="finished" from="Main/DialogueManager" to="." method="_on_dialogue_manager_finished"]
[connection signal="finished" from="Main/DialogueManager" to="Main" method="_on_dialogue_manager_finished"]
[connection signal="message_completed" from="Main/DialogueManager" to="Main" method="_on_dialogue_manager_message_completed"]
[connection signal="message_requested" from="Main/DialogueManager" to="Main" method="_on_dialogue_manager_message_requested"]
[connection signal="timeout" from="Flicker_Timmer" to="." method="_on_flicker_timmer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
